// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# options ## constructor ### should merge json options 1`] = `
Options {
  "design": Array [
    "da",
    "db",
    "dc",
    "dd",
  ],
  "extension": Array [
    "ea",
    "eb",
    "ec",
    "ed",
  ],
  "generator": Array [
    "ga",
    "gb",
    "gc",
    "gd",
  ],
  "map": Array [
    "ma",
    "mb",
    "mc",
    "md",
  ],
  "options": Array [
    "someoption.json",
    "moreoption.json",
  ],
  "someOption": Object {},
}
`;

exports[`# options ## constructor ### should merge options 1`] = `
Options {
  "design": Array [
    "da",
    "db",
  ],
  "extension": Array [
    "ea",
    "eb",
  ],
  "generator": Array [
    "ga",
    "gb",
  ],
  "map": Array [
    "ma",
    "mb",
  ],
  "options": Array [],
  "someOption": Object {},
}
`;

exports[`# options ## constructor ### should merge options 2`] = `
Options {
  "design": Array [
    "da",
    "db",
    "dc",
    "dd",
  ],
  "extension": Array [
    "ea",
    "eb",
    "ec",
    "ed",
  ],
  "generator": Array [
    "ga",
    "gb",
    "gc",
    "gd",
  ],
  "map": Array [
    "ma",
    "mb",
    "mc",
    "md",
  ],
  "options": Array [],
  "someOption": Object {},
}
`;

exports[`# options ## constructor ### should merge yaml options 1`] = `
Options {
  "design": Array [
    "da",
    "db",
  ],
  "extension": Array [
    "ea",
    "eb",
  ],
  "generator": Array [
    "ga",
    "gb",
  ],
  "map": Array [
    "ma",
    "mb",
  ],
  "options": Array [
    "someoption.yml",
  ],
  "someOption": Object {},
}
`;

exports[`# options ## constructor ### should parse all options 1`] = `
Options {
  "design": Array [],
  "extension": Array [],
  "generator": Array [],
  "map": Array [],
  "options": Array [],
  "someOption": Object {},
}
`;
